feat: autenticação jwt, validando se o usuario é perfil administrador
